# late-chunking

./: .gitignore  README.md  pyproject.toml
src/late_chunking/: __init__.py  late_chunking.py
tests/: test_embedder.py  test_late_embedder.py
