[project]
name = "late-chunking"
version = "0.1.0"
description = "Applying late chunking as developed by Jina AI"
readme = "README.md"
authors = [
    { name = "Mischa Ungermann", email = "mischa@dataworkz.de" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
